Fixed an overflow / word-wrap bug in ItemSetSelector

--- a/woost/admin/ui/resources/styles/woost-admin-ui-editview--editform.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-editview--editform.scss
@@ -5,3 +5,7 @@
     width: 30em;
 }
 
+.cocktail-ui-Tab {
+    overflow-y: scroll;
+}
+
