--- a/woost/admin/ui/resources/styles/woost-admin-ui-itemsetselector.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-itemsetselector.scss
@@ -3,7 +3,7 @@
 
 :host {
     user-select: none;
-    display: inline-block;
+    display: block;
     position: relative;
 }
 
